# Discord-Ai-Text-Bot

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: bot.py  main.py
